ajustes na one page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="app-container">
         <header>
-            <div class="logo"> 𖠰 eco.info</div>
+            <div class="logo">eco.info</div>
             <nav class="nav-pills">
                 <a href="#mission">Missão</a>
                 <a href="#campaigns">Campanhas</a>
